# sifre-olusturucu

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: sifre-uret.yml
ornekler/: basit_kullanim.py
sifre_olusturucu/: __init__.py  __main__.py  olusturucu.py
tests/: test_olusturucu.py
